Client list updated

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                         <p>Barista Garage</p>
                     </div>
                 </a>
+
+                <a href="https://rongotaan.onrender.com/" target="_blank">
+                    <div class="client-card">
+                        <img src="/assets/rongotaan.png" alt="Rongotaan">
+                        <p>Rongotaan</p>
+                    </div>
+                </a>
             </div>
         </section>
 
