--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nehan Yaser's Webpage</title>
+    <title>Nehan Yaser Khan</title>
     <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
@@ -17,7 +17,7 @@
 
       <nav>
         <a href="/">Home</a>
-        <a href="https://framesbynehanyaser.vercel.app/" target="_blank"
+        <a href="frames.html"
           >Frames</a
         >
       </nav>
