--- a/frames.html
+++ b/frames.html
@@ -48,11 +48,11 @@
           </div>
 
           <div class="frame">
-            <img src="/assets/frames/2.jpg" style="width: 100%" />
+            <img src="/assets/frames/2.JPG" style="width: 100%" />
           </div>
 
           <div class="frame">
-            <img src="/assets/frames/3.jpg" style="width: 100%" />
+            <img src="/assets/frames/3.JPG" style="width: 100%" />
           </div>
           <div class="frame">
             <img src="/assets/frames/4.jpg" style="width: 100%" />
@@ -61,10 +61,10 @@
             <img src="/assets/frames/5.jpg" style="width: 100%" />
           </div>
           <div class="frame">
-            <img src="/assets/frames/6.jpg" style="width: 100%" />
+            <img src="/assets/frames/6.JPG" style="width: 100%" />
           </div>
           <div class="frame">
-            <img src="/assets/frames/7.jpg" style="width: 100%" />
+            <img src="/assets/frames/7.JPG" style="width: 100%" />
           </div>
 
           <div class="frame">
@@ -80,9 +80,9 @@
           </div>
 
           <div class="frame">
-            <img src="/assets/frames/11.jpg" style="width: 100%" />
+            <img src="/assets/frames/11.JPG" style="width: 100%" />
           </div>
-          
+
           <button class="button-prev" onclick="plusDivs(-1)">
             <i class="fa-solid fa-arrow-left"></i>
           </button>
