--- a/frames.html
+++ b/frames.html
@@ -43,44 +43,44 @@
       <main>
         <div class="image-container">
 
-          <div class="frame">
-            <img src="/assets/frames/1.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/1.jpg" style="width: 100%" />
           </div>
 
-          <div class="frame">
-            <img src="/assets/frames/2.JPG" style="width: 100%" />
+          <div>
+            <img  class="frame" src="/assets/frames/2.JPG" style="width: 100%" />
           </div>
 
-          <div class="frame">
-            <img src="/assets/frames/3.JPG" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/3.JPG" style="width: 100%" />
           </div>
-          <div class="frame">
-            <img src="/assets/frames/4.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/4.jpg" style="width: 100%" />
           </div>
-          <div class="frame">
-            <img src="/assets/frames/5.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/5.jpg" style="width: 100%" />
           </div>
-          <div class="frame">
-            <img src="/assets/frames/6.JPG" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/6.JPG" style="width: 100%" />
           </div>
-          <div class="frame">
-            <img src="/assets/frames/7.JPG" style="width: 100%" />
-          </div>
-
-          <div class="frame">
-            <img src="/assets/frames/8.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/7.JPG" style="width: 100%" />
           </div>
 
-          <div class="frame">
-            <img src="/assets/frames/9.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/8.jpg" style="width: 100%" />
           </div>
 
-          <div class="frame">
-            <img src="/assets/frames/10.jpg" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/9.jpg" style="width: 100%" />
           </div>
 
-          <div class="frame">
-            <img src="/assets/frames/11.JPG" style="width: 100%" />
+          <div>
+            <img class="frame" src="/assets/frames/10.jpg" style="width: 100%" />
+          </div>
+
+          <div>
+            <img class="frame" src="/assets/frames/11.JPG" style="width: 100%" />
           </div>
 
           <button class="button-prev" onclick="plusDivs(-1)">
