--- a/frames.html
+++ b/frames.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frames by Nehan Yaser</title>
     <link rel="stylesheet" href="/styles/frames.css" />
+    <link
+      rel="stylesheet"
+      href="https://fontawesome-pro.vercel.app/css/all.min.css"
+    />
   </head>
   <body>
     <audio src="/assets/frames/farda.mp3"></audio>
