--- a/frames.html
+++ b/frames.html
@@ -11,15 +11,15 @@
     />
   </head>
   <body>
-    <audio src="/assets/frames/farda.mp3"></audio>
+    <audio src="/assets/frames/music.mp3"></audio>
 
     <div class="loader">
       <div class="loader-text">
         <div class="intro-text">
-          <h2>Ramadan / Eid Dump</h2>
+          <h2>Rag Day '25</h2>
 
           <p>
-            I wasn't actually serious when I said "next দুই মাস পড়ব না" after test ended, but here we are. HSC is in about two months, right? But, honestly, I'm not going to regret not studying because I probably had the best Ramadan. I don't know what the future holds, but at least I'll have these photos to reminisce on. Anyways, time to lock in, bye!
+            I honestly didn't know what to expect this time around, and I never expected to enjoy the day so much. There's a different kind of satisfaction when you've worked tirelessly to put something together and it all just clicks. A year and a half ago, I was waiting for college to end, and now that it's actually about to end, I regret the time I could've spent with my friends. To all my friends, I love you guys and I'll miss you so much. I hope you guys slay HSC!
           </p>
 
           <button onclick="viewFrames()">View Highlights</button>
@@ -38,17 +38,16 @@
 
       <main>
         <div class="image-container">
-
           <div>
             <img class="frame" src="/assets/frames/1.jpg" style="width: 100%" />
           </div>
 
           <div>
-            <img  class="frame" src="/assets/frames/2.JPG" style="width: 100%" />
+            <img  class="frame" src="/assets/frames/2.jpg" style="width: 100%" />
           </div>
 
           <div>
-            <img class="frame" src="/assets/frames/3.JPG" style="width: 100%" />
+            <img class="frame" src="/assets/frames/3.jpg" style="width: 100%" />
           </div>
           <div>
             <img class="frame" src="/assets/frames/4.jpg" style="width: 100%" />
@@ -57,26 +56,10 @@
             <img class="frame" src="/assets/frames/5.jpg" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/6.JPG" style="width: 100%" />
+            <img class="frame" src="/assets/frames/6.jpg" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/7.JPG" style="width: 100%" />
-          </div>
-
-          <div>
-            <img class="frame" src="/assets/frames/8.jpg" style="width: 100%" />
-          </div>
-
-          <div>
-            <img class="frame" src="/assets/frames/9.jpg" style="width: 100%" />
-          </div>
-
-          <div>
-            <img class="frame" src="/assets/frames/10.jpg" style="width: 100%" />
-          </div>
-
-          <div>
-            <img class="frame" src="/assets/frames/11.JPG" style="width: 100%" />
+            <img class="frame" src="/assets/frames/7.jpg" style="width: 100%" />
           </div>
 
           <button class="button-prev" onclick="plusDivs(-1)">
