--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
               <p>Rongotaan</p>
             </div>
           </a>
+
+          <!-- <a href="https://zakariafoundation.com//" target="_blank">
+            <div class="client-card">
+              <img src="/assets/zakaria.png" alt="Zakaria Foundation" />
+              <p>Zakaria Foundation</p>
+            </div>
+          </a> -->
         </div>
       </section>
 
