--- a/index.html
+++ b/index.html
@@ -1,161 +1,256 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nehan Yaser Khan</title>
+    <title>Nehan - Frontend Developer</title>
     <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       href="https://fontawesome-pro.vercel.app/css/all.min.css"
     />
   </head>
-
   <body>
-    <header>
-      <h4>Nehan Yaser</h4>
-
-      <nav>
-        <a href="/">Home</a>
-        <a href="frames.html"
-          >Frames</a
-        >
-      </nav>
-    </header>
-
-    <div class="loader"></div>
-
-    <div class="container">
-      <div class="header">
-        <img src="/assets/display.jpg" alt="Nehan Yaser Khan" />
-
-        <div class="header-text">
-          <h2>Hi, I'm Nehan Yaser Khan!</h2>
-          <p>Frontend Developer</p>
+    <main>
+      <div class="container">
+        <div class="hero">
+          <p class="lg">Nehan Yaser Khan</p>
+          <p class="light grey sm">Frontend Developer, Dhaka</p>
         </div>
-      </div>
 
-      <section>
-        <h2>About Me</h2>
+        <div class="about">
+          <h2 class="title">About</h2>
 
-        <p>
-          I'm just a 20-year-old who's been playing around with JavaScript for
-          the last four years. I don't have a perfect portfolio, and I've
-          definitely left some projects unfinished, but I've built enough to
-          know I can get things done. If there's anything I can do for you feel
-          free to contact me!
-        </p>
-      </section>
+          <p class="gray">
+            I'm just a 20-year-old who's been playing around with JavaScript for
+            the last five years. I don't have a perfect portfolio, and I've
+            definitely left some projects unfinished, but I've built enough to
+            know I can get things done. If there's anything I can do for you
+            feel free to contact me!
+          </p>
+        </div>
 
-      <section>
-        <h2>My Clients</h2>
+        <section>
+          <h2 class="title">Client Work</h2>
 
-        <div class="clients">
-          <a href="https://squad24seven.com/" target="_blank">
-            <div class="client-card">
-              <img src="/assets/247.png" alt="Squad 24 Seven" />
-              <p>Squad 24 Seven</p>
+          <div class="row">
+            <div class="date">
+              <p>2024 - present</p>
             </div>
-          </a>
 
-          <a href="https://asitsolutions.net/" target="_blank">
-            <div class="client-card">
-              <img src="/assets/asit.png" alt="AS IT Solutions" />
-              <p>AS IT Solutions</p>
+            <div class="project">
+              <a href="https://squad24seven.com/" target="_blank"
+                ><p>Squad 24 Seven <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • JavaScript</p>
             </div>
-          </a>
+          </div>
 
-          <a href="https://baristagarage.com/" target="_blank">
-            <div class="client-card">
-              <img src="/assets/baristag.png" alt="Barista Garage" />
-              <p>Barista Garage</p>
+          <div class="row">
+            <div class="date">
+              <p>2024 - present</p>
             </div>
-          </a>
 
-          <a href="https://rongotaan.onrender.com/" target="_blank">
-            <div class="client-card">
-              <img src="/assets/rongotaan.png" alt="Rongotaan" />
-              <p>Rongotaan</p>
+            <div class="project">
+              <a href="https://asitsolutions.net/" target="_blank"
+                ><p>
+                  AS IT Solutions <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • JavaScript</p>
             </div>
-          </a>
+          </div>
 
-          <!-- <a href="https://zakariafoundation.com//" target="_blank">
-            <div class="client-card">
-              <img src="/assets/zakaria.png" alt="Zakaria Foundation" />
+          <div class="row">
+            <div class="date">
+              <p>2024 - present</p>
+            </div>
+
+            <div class="project">
+              <a href="https://baristagarage.com/" target="_blank"
+                ><p>Barista Garage <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2025</p>
+            </div>
+
+            <div class="project">
+              <a href="https://rongotaan.onrender.com/" target="_blank"
+                ><p>Rongotaan <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2025 - present</p>
+            </div>
+
+            <div class="project">
               <p>Zakaria Foundation</p>
+              <p class="technologies">Node • Express • JavaScript</p>
             </div>
-          </a> -->
-        </div>
-      </section>
+          </div>
+        </section>
 
-      <section>
-        <h2>Personal Projects</h2>
+        <section>
+          <h2 class="title">Side Projects</h2>
 
-        <div class="projects">
-          <div class="project-preview">
-            <a href="https://github.com/webdevsint/mango-v2" target="_blank"
-              ><img src="/assets/mango.jpg" alt="Mango"
-            /></a>
-            <a href="https://github.com/webdevsint/mood-tracker" target="_blank"
-              ><img src="/assets/mood-tracker.jpg" alt="Mood Tracker"
-            /></a>
-            <a href="https://github.com/webdevsint/weatherly" target="_blank"
-              ><img src="/assets/weatherly.jpg" alt="Weatherly"
-            /></a>
+          <div class="row">
+            <div class="date">
+              <p>2023</p>
+            </div>
+
+            <div class="project">
+              <a
+                href="https://github.com/webdevsint/mood-tracker"
+                target="_blank"
+                ><p>Mood Tracker <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Local Storage • JavaScript</p>
+            </div>
           </div>
 
-          <div class="project-preview">
-            <a href="https://github.com/webdevsint/mac" target="_blank"
-              ><img src="/assets/mac.jpg" alt="Mac (Unfinished)"
-            /></a>
-            <a
-              href="https://github.com/webdevsint/deranged-blog"
-              target="_blank"
-              ><img src="/assets/blog.jpg" alt="Deranged Blog"
-            /></a>
-            <a href="https://github.com/webdevsint/local-db" target="_blank"
-              ><img src="/assets/localdb.jpg" alt="Local DB"
-            /></a>
+          <div class="row">
+            <div class="date">
+              <p>2023</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/weatherly" target="_blank"
+                ><p>Weatherly <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">HTML • CSS • JavaScript</p>
+            </div>
           </div>
-        </div>
-      </section>
 
-      <section>
-        <h2>My Socials</h2>
+          <div class="row">
+            <div class="date">
+              <p>2023</p>
+            </div>
 
-        <div class="socials">
-          <div class="socials-row">
+            <div class="project">
+              <a href="https://github.com/webdevsint/localpad" target="_blank"
+                ><p>Localpad <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Local Storage • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2023</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/portfolio" target="_blank"
+                ><p>Portfolio <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Local Storage • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2022</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/blog" target="_blank"
+                ><p>Blog <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2022</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/mango-v2" target="_blank"
+                ><p>Mango <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • JavaScript</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2022</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/shorty" target="_blank"
+                ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • EJS</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2021</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/mac" target="_blank"
+                ><p>
+                  Mac (unfinished) <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Vue • JavaScript</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="socials">
+          <h2 class="title">Socials</h2>
+
+          <div class="row">
+            <p class="platform">GitHub</p>
+            <a href="https://github.com/webdevsint/" target="_blank"
+              ><p class="username">
+                @webdevsint <i class="fa-light fa-arrow-up-right"></i></p
+            ></a>
+          </div>
+
+          <div class="row">
+            <p class="platform">Instagram</p>
+            <a href="https://instagram.com/nehan_yaser/" target="_blank"
+              ><p class="username">
+                @nehan_yaser <i class="fa-light fa-arrow-up-right"></i></p
+            ></a>
+          </div>
+        </section>
+
+        <section class="socials">
+          <h2 class="title">Contact</h2>
+
+          <div class="row">
+            <p class="platform">Email</p>
+            <a href="mailto:nehanyaser@gmail.com"
+              ><p class="username">
+                nehanyaser@gmail
+                <i class="fa-light fa-arrow-up-right"></i></p
+            ></a>
+          </div>
+
+          <div class="row">
+            <p class="platform">WhatsApp</p>
             <a
               href="https://api.whatsapp.com/send?phone=8801778840205"
               target="_blank"
-              ><div class="social"><i class="fa-brands fa-whatsapp"></i></div
-            ></a>
-            <a href="mailto:nehanyaser@gmail.com"
-              ><div class="social"><i class="fa-regular fa-envelopes"></i></div
+              ><p class="username">
+                +880 1778-840205 <i class="fa-light fa-arrow-up-right"></i></p
             ></a>
           </div>
-
-          <div class="socials-row">
-            <a href="https://github.com/webdevsint" target="_blank"
-              ><div class="social"><i class="fa-brands fa-github"></i></div
-            ></a>
-            <a href="https://www.instagram.com/nehan_yaser/" target="_blank"
-              ><div class="social"><i class="fa-brands fa-instagram"></i></div
-            ></a>
-          </div>
-        </div>
-      </section>
-    </div>
-
-    <footer>
-      <p>&copy; Nehan Yaser 2025</p>
-    </footer>
-
-    <script>
-      window.onload = () => {
-        document.querySelector(".loader").style.display = "none";
-        document.querySelector(".container").style.display = "flex";
-      };
-    </script>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
