--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <p class="platform">Email</p>
             <a href="mailto:nehanyaser@gmail.com"
               ><p class="username">
-                nehanyaser@gmail
+                nehanyaser@gmail.com
                 <i class="fa-light fa-arrow-up-right"></i></p
             ></a>
           </div>
