--- a/index.html
+++ b/index.html
@@ -209,7 +209,15 @@
         </section>
 
         <section class="socials">
-          <h2 class="title">Socials</h2>
+          <h2 class="title">Links</h2>
+
+          <div class="row">
+            <p class="platform">Highlights</p>
+            <a href="/frames.html" target="_blank"
+              ><p class="username">
+                Frames <i class="fa-light fa-arrow-up-right"></i></p
+            ></a>
+          </div>
 
           <div class="row">
             <p class="platform">GitHub</p>
