--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <div class="project">
               <p>Zakaria Foundation</p>
-              <p class="technologies">Node • Express • JavaScript</p>
+              <p class="technologies">Node • Express • Alpine</p>
             </div>
           </div>
         </section>
