--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="https://squad24seven.com/" target="_blank"
                 ><p>Squad 24 Seven <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • Express • JavaScript</p>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
 
@@ -55,13 +55,13 @@
                 ><p>
                   AS IT Solutions <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • Express • JavaScript</p>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
 
           <div class="row">
             <div class="date">
-              <p>2024 - present</p>
+              <p>2024</p>
             </div>
 
             <div class="project">
@@ -150,20 +150,7 @@
               <a href="https://github.com/webdevsint/portfolio" target="_blank"
                 ><p>Portfolio <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Local Storage • JavaScript</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="date">
-              <p>2022</p>
-            </div>
-
-            <div class="project">
-              <a href="https://github.com/webdevsint/blog" target="_blank"
-                ><p>Blog <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
-              <p class="technologies">Node • Express • JavaScript</p>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
 
@@ -177,19 +164,6 @@
                 ><p>Mango <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
               <p class="technologies">Node • JavaScript</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="date">
-              <p>2022</p>
-            </div>
-
-            <div class="project">
-              <a href="https://github.com/webdevsint/shorty" target="_blank"
-                ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
-              <p class="technologies">Node • Express • EJS</p>
             </div>
           </div>
 
