Update client list

--- a/index.html
+++ b/index.html
@@ -2,12 +2,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nehan - Frontend Developer</title>
     <link rel="stylesheet" href="/styles/index.css" />
     <link
       rel="stylesheet"
       href="https://fontawesome-pro.vercel.app/css/all.min.css"
     />
+
+    <!-- Primary Meta Tags -->
+    <title>Nehan - Frontend Developer</title>
+    <meta name="title" content="Nehan - Frontend Developer" />
+    <meta name="description" content="Hi, I make websites!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nehanyaser.vercel.app/" />
+    <meta property="og:title" content="Nehan - Frontend Developer" />
+    <meta property="og:description" content="Hi, I make websites!" />
+    <meta
+      property="og:image"
+      content="/assets/hero.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://nehanyaser.vercel.app/" />
+    <meta property="twitter:title" content="Nehan - Frontend Developer" />
+    <meta property="twitter:description" content="Hi, I make websites!" />
+    <meta
+      property="twitter:image"
+      content="/assets/hero.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <main>
@@ -22,7 +48,7 @@
 
           <p class="gray">
             I'm just a 20-year-old who's been playing around with JavaScript for
-            the last five years. I don't have a perfect portfolio, and I've
+            the last few years. I don't have a perfect portfolio, and I've
             definitely left some projects unfinished, but I've built enough to
             know I can get things done. If there's anything I can do for you
             feel free to contact me!
@@ -93,6 +119,17 @@
             <div class="project">
               <p>Zakaria Foundation</p>
               <p class="technologies">Node • Express • Alpine</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2025 - present</p>
+            </div>
+
+            <div class="project">
+              <p>Coffee Lab Bangladesh</p>
+              <p class="technologies">Wordpress</p>
             </div>
           </div>
         </section>
@@ -208,10 +245,6 @@
                 @nehan_yaser <i class="fa-light fa-arrow-up-right"></i></p
             ></a>
           </div>
-        </section>
-
-        <section class="socials">
-          <h2 class="title">Contact</h2>
 
           <div class="row">
             <p class="platform">Email</p>
