--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 target="_blank"
                 ><p>Mood Tracker <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Local Storage • JavaScript</p>
+              <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
 
@@ -161,7 +161,7 @@
               <a href="https://github.com/webdevsint/weatherly" target="_blank"
                 ><p>Weatherly <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">HTML • CSS • JavaScript</p>
+              <p class="technologies">JavaScript</p>
             </div>
           </div>
 
@@ -174,7 +174,7 @@
               <a href="https://github.com/webdevsint/localpad" target="_blank"
                 ><p>Localpad <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Local Storage • JavaScript</p>
+              <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
               <a href="https://github.com/webdevsint/mango-v2" target="_blank"
                 ><p>Mango <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • JavaScript</p>
+              <p class="technologies">Node</p>
             </div>
           </div>
 
@@ -214,7 +214,7 @@
                 ><p>
                   Mac (unfinished) <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Vue • JavaScript</p>
+              <p class="technologies">Vue</p>
             </div>
           </div>
         </section>
