--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 target="_blank"
                 ><p>Mood Tracker <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">A mood tracker PWA built on localstorage.</p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
@@ -161,6 +162,7 @@
               <a href="https://github.com/webdevsint/weatherly" target="_blank"
                 ><p>Weatherly <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">My favourite weather app.</p>
               <p class="technologies">JavaScript</p>
             </div>
           </div>
@@ -174,6 +176,7 @@
               <a href="https://github.com/webdevsint/localpad" target="_blank"
                 ><p>Localpad <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">A note keeping app built on localstorage.</p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
@@ -187,6 +190,7 @@
               <a href="https://github.com/webdevsint/portfolio" target="_blank"
                 ><p>Portfolio <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">A photography portfolio website.</p>
               <p class="technologies">Node • Express</p>
             </div>
           </div>
@@ -200,6 +204,7 @@
               <a href="https://github.com/webdevsint/mango-v2" target="_blank"
                 ><p>Mango <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">A makeshift non-relational database.</p>
               <p class="technologies">Node</p>
             </div>
           </div>
@@ -212,8 +217,9 @@
             <div class="project">
               <a href="https://github.com/webdevsint/mac" target="_blank"
                 ><p>
-                  Mac (unfinished) <i class="fa-light fa-arrow-up-right"></i></p
+                  Mac <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
+              <p class="description">An unfinished personal website emulating MacOS.</p>
               <p class="technologies">Vue</p>
             </div>
           </div>
