--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
             </div>
 
             <div class="project">
-              <a href="https://github.com/webdevsint/mac" target="_blank"
+              <a href="https://github.com/webdevsint/xay" target="_blank"
                 ><p>
-                  Mac <i class="fa-light fa-arrow-up-right"></i></p
+                  Xay <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">An unfinished personal website emulating MacOS.</p>
-              <p class="technologies">Vue</p>
+              <p class="description">An unfinished desktop emulating personal website.</p>
+              <p class="technologies">JavaScript</p>
             </div>
           </div>
         </section>
