--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Nehan - Frontend Developer</title>
-    <meta name="title" content="Nehan - Frontend Developer" />
+    <title>Nehan Yaser</title>
+    <meta name="title" content="Nehan Yaser" />
     <meta name="description" content="Hi, I make websites!" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nehanyaser.vercel.app/" />
-    <meta property="og:title" content="Nehan - Frontend Developer" />
+    <meta property="og:title" content="Nehan Yaser" />
     <meta property="og:description" content="Hi, I make websites!" />
     <meta
       property="og:image"
@@ -26,7 +26,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://nehanyaser.vercel.app/" />
-    <meta property="twitter:title" content="Nehan - Frontend Developer" />
+    <meta property="twitter:title" content="Nehan Yaser" />
     <meta property="twitter:description" content="Hi, I make websites!" />
     <meta
       property="twitter:image"
