--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
 
             <div class="project">
-              <p>Zakaria Foundation</p>
+              <p style="font-size: 14px;">Zakaria Foundation</p>
               <p class="technologies">Node • Express • Alpine</p>
             </div>
           </div>
