--- a/index.html
+++ b/index.html
@@ -56,32 +56,27 @@
         </div>
 
         <section>
-          <h2 class="title">Client Work</h2>
+          <h2 class="title">My Clients</h2>
 
           <div class="row">
             <div class="date">
-              <p>2024 - present</p>
+              <p>2025</p>
             </div>
 
             <div class="project">
-              <a href="https://squad24seven.com/" target="_blank"
-                ><p>Squad 24 Seven <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
-              <p class="technologies">Node • Express</p>
+              <p style="font-size: 14px;">Zakaria Foundation</p>
+              <p class="technologies">Node • Express • Alpine</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2024 - present</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
-              <a href="https://asitsolutions.net/" target="_blank"
-                ><p>
-                  AS IT Solutions <i class="fa-light fa-arrow-up-right"></i></p
+              <a href="https://rongotaan.onrender.com/" target="_blank"
+                ><p>Rongotaan <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • Express</p>
+              <p class="technologies">Node • Express • JavaScript</p>
             </div>
           </div>
 
@@ -99,26 +94,25 @@
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2025</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
-              <a href="https://rongotaan.onrender.com/" target="_blank"
-                ><p>Rongotaan <i class="fa-light fa-arrow-up-right"></i></p
+              <a href="https://asitsolutions.net/" target="_blank"
+                ><p>
+                  AS IT Solutions <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • Express • JavaScript</p>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2025 - present</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
-              <p style="font-size: 14px;">Zakaria Foundation</p>
-              <p class="technologies">Node • Express • Alpine</p>
+              <a href="https://squad24seven.com/" target="_blank"
+                ><p>Squad 24 Seven <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
         </section>
@@ -143,9 +137,7 @@
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2023</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/weatherly" target="_blank"
@@ -157,9 +149,7 @@
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2023</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/localpad" target="_blank"
@@ -171,9 +161,7 @@
           </div>
 
           <div class="row">
-            <div class="date">
-              <p>2023</p>
-            </div>
+            <div class="date"></div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/portfolio" target="_blank"
