--- a/index.html
+++ b/index.html
@@ -18,20 +18,14 @@
     <meta property="og:url" content="https://nehanyaser.vercel.app/" />
     <meta property="og:title" content="Nehan Yaser" />
     <meta property="og:description" content="Hi, I make websites!" />
-    <meta
-      property="og:image"
-      content="/assets/hero.png"
-    />
+    <meta property="og:image" content="/assets/hero.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://nehanyaser.vercel.app/" />
     <meta property="twitter:title" content="Nehan Yaser" />
     <meta property="twitter:description" content="Hi, I make websites!" />
-    <meta
-      property="twitter:image"
-      content="/assets/hero.png"
-    />
+    <meta property="twitter:image" content="/assets/hero.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
@@ -56,21 +50,23 @@
         </div>
 
         <section>
-          <h2 class="title">My Clients</h2>
+          <h2 class="title">Client Work</h2>
 
           <div class="row">
             <div class="date">
-              <p>2025</p>
+              <p>Ongoing</p>
             </div>
 
             <div class="project">
-              <p style="font-size: 14px;">Zakaria Foundation</p>
+              <p style="font-size: 14px">Zakaria Foundation</p>
               <p class="technologies">Node • Express • Alpine</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2025</p>
+            </div>
 
             <div class="project">
               <a href="https://rongotaan.onrender.com/" target="_blank"
@@ -94,7 +90,9 @@
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2024</p>
+            </div>
 
             <div class="project">
               <a href="https://asitsolutions.net/" target="_blank"
@@ -106,7 +104,9 @@
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2024</p>
+            </div>
 
             <div class="project">
               <a href="https://squad24seven.com/" target="_blank"
@@ -131,13 +131,17 @@
                 target="_blank"
                 ><p>Mood Tracker <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">A mood tracker PWA built on localstorage.</p>
+              <p class="description">
+                A mood tracker PWA built on localstorage.
+              </p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/weatherly" target="_blank"
@@ -149,19 +153,25 @@
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/localpad" target="_blank"
                 ><p>Localpad <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">A note keeping app built on localstorage.</p>
+              <p class="description">
+                A note keeping app built on localstorage.
+              </p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date"></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/portfolio" target="_blank"
@@ -193,10 +203,11 @@
 
             <div class="project">
               <a href="https://github.com/webdevsint/xay" target="_blank"
-                ><p>
-                  Xay <i class="fa-light fa-arrow-up-right"></i></p
+                ><p>Xay <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">An unfinished desktop emulating personal website.</p>
+              <p class="description">
+                An unfinished desktop emulating personal website.
+              </p>
               <p class="technologies">JavaScript</p>
             </div>
           </div>
