--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
           <div class="row">
             <div class="date">
-              <p>2025</p>
+              <p>Ongoing</p>
             </div>
 
             <div class="project">
@@ -70,7 +70,7 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2025</p></div>
+            <div class="date"><p>2025</p></div>
 
             <div class="project">
               <p style="font-size: 14px;">Rongotaan</p>
