--- a/index.html
+++ b/index.html
@@ -18,20 +18,14 @@
     <meta property="og:url" content="https://nehanyaser.vercel.app/" />
     <meta property="og:title" content="Nehan Yaser" />
     <meta property="og:description" content="Hi, I make websites!" />
-    <meta
-      property="og:image"
-      content="/assets/hero.png"
-    />
+    <meta property="og:image" content="/assets/hero.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://nehanyaser.vercel.app/" />
     <meta property="twitter:title" content="Nehan Yaser" />
     <meta property="twitter:description" content="Hi, I make websites!" />
-    <meta
-      property="twitter:image"
-      content="/assets/hero.png"
-    />
+    <meta property="twitter:image" content="/assets/hero.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
@@ -64,7 +58,7 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px;">Zakaria Foundation</p>
+              <p style="font-size: 14px">Zakaria Foundation</p>
               <p class="technologies">Node • Express • Alpine</p>
             </div>
           </div>
@@ -73,7 +67,7 @@
             <div class="date"><p>2025</p></div>
 
             <div class="project">
-              <p style="font-size: 14px;">Rongotaan</p>
+              <p style="font-size: 14px">Rongotaan</p>
               <p class="technologies">Node • Express • JavaScript</p>
             </div>
           </div>
@@ -120,6 +114,20 @@
 
           <div class="row">
             <div class="date">
+              <p>2025</p>
+            </div>
+
+            <div class="project">
+              <a href="https://github.com/webdevsint/shorty" target="_blank"
+                ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="description">Just another open source URL shortener.</p>
+              <p class="technologies">Node • Express • Local Storage</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
               <p>2023</p>
             </div>
 
@@ -129,7 +137,9 @@
                 target="_blank"
                 ><p>Mood Tracker <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">A mood tracker PWA built on localstorage.</p>
+              <p class="description">
+                A mood tracker PWA built on localstorage.
+              </p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
@@ -153,7 +163,9 @@
               <a href="https://github.com/webdevsint/localpad" target="_blank"
                 ><p>Localpad <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">A note keeping app built on localstorage.</p>
+              <p class="description">
+                A note keeping app built on localstorage.
+              </p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
@@ -191,10 +203,11 @@
 
             <div class="project">
               <a href="https://github.com/webdevsint/xay" target="_blank"
-                ><p>
-                  Xay <i class="fa-light fa-arrow-up-right"></i></p
+                ><p>Xay <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">An unfinished desktop emulating personal website.</p>
+              <p class="description">
+                An unfinished desktop emulating personal website.
+              </p>
               <p class="technologies">JavaScript</p>
             </div>
           </div>
