--- a/frames.html
+++ b/frames.html
@@ -11,15 +11,17 @@
     />
   </head>
   <body>
+    <div id="preloader"></div>
+
     <audio src="/assets/frames/music.mp3"></audio>
 
     <div class="loader">
       <div class="loader-text">
         <div class="intro-text">
-          <h2>Rag Day '25</h2>
+          <h2>The End</h2>
 
           <p>
-            I honestly didn't know what to expect this time around, and I never expected to enjoy the day so much. There's a different kind of satisfaction when you've worked tirelessly to put something together and it all just clicks. A year and a half ago, I was waiting for college to end, and now that it's actually about to end, I regret the time I could've spent with my friends. To all my friends, I love you guys and I'll miss you so much. I hope you guys slay HSC!
+            The start of college is a vivid memory, even though that journey is complete. I have no regrets because it was an essential period of growth. The memories I created are treasures I'll keep forever.
           </p>
 
           <button onclick="viewFrames()">View Highlights</button>
@@ -39,27 +41,30 @@
       <main>
         <div class="image-container">
           <div>
-            <img class="frame" src="/assets/frames/1.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/1-min.png" style="width: 100%" />
           </div>
 
           <div>
-            <img  class="frame" src="/assets/frames/2.jpg" style="width: 100%" />
+            <img  class="frame" src="/assets/frames/2-min.png" style="width: 100%" />
           </div>
 
           <div>
-            <img class="frame" src="/assets/frames/3.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/3-min.png" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/4.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/4-min.png" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/5.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/5-min.png" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/6.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/6-min.png" style="width: 100%" />
           </div>
           <div>
-            <img class="frame" src="/assets/frames/7.jpg" style="width: 100%" />
+            <img class="frame" src="/assets/frames/7-min.png" style="width: 100%" />
+          </div>
+          <div>
+            <img class="frame" src="/assets/frames/8-min.png" style="width: 100%" />
           </div>
 
           <button class="button-prev" onclick="plusDivs(-1)">
