--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
         </div>
 
         <section>
-          <h2 class="title">My Clients</h2>
+          <h2 class="title">Client Work</h2>
+
+          <div class="row">
+            <div class="date">
+              <p>Ongoing</p>
+            </div>
+
+            <div class="project">
+              <p style="font-size: 14px">Evercare Security Solutions Ltd.</p>
+              <p class="technologies">Node • Express</p>
+            </div>
+          </div>
 
           <div class="row">
             <div class="date">
@@ -59,15 +70,19 @@
 
             <div class="project">
               <p style="font-size: 14px">Zakaria Foundation</p>
-              <p class="technologies">Node • Express • Alpine</p>
+              <p class="technologies">Node • Express • SQLite</p>
             </div>
           </div>
 
           <div class="row">
-            <div class="date"><p>2025</p></div>
+            <div class="date">
+              <p>2025</p>
+            </div>
 
             <div class="project">
-              <p style="font-size: 14px">Rongotaan</p>
+              <a href="https://rongotaan.onrender.com/" target="_blank"
+                ><p>Rongotaan <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
               <p class="technologies">Node • Express • JavaScript</p>
             </div>
           </div>
@@ -86,7 +101,9 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2024</p></div>
+            <div class="date">
+              <p>2024</p>
+            </div>
 
             <div class="project">
               <a href="https://asitsolutions.net/" target="_blank"
@@ -98,7 +115,9 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2024</p></div>
+            <div class="date">
+              <p>2024</p>
+            </div>
 
             <div class="project">
               <a href="https://squad24seven.com/" target="_blank"
@@ -111,20 +130,6 @@
 
         <section>
           <h2 class="title">Side Projects</h2>
-
-          <div class="row">
-            <div class="date">
-              <p>2025</p>
-            </div>
-
-            <div class="project">
-              <a href="https://github.com/webdevsint/shorty" target="_blank"
-                ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
-              <p class="description">Just another open source URL shortener.</p>
-              <p class="technologies">Node • Express • Local Storage</p>
-            </div>
-          </div>
 
           <div class="row">
             <div class="date">
@@ -145,7 +150,9 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2023</p></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/weatherly" target="_blank"
@@ -157,7 +164,9 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2023</p></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/localpad" target="_blank"
@@ -171,7 +180,9 @@
           </div>
 
           <div class="row">
-            <div class="date"><p class="hidden">2023</p></div>
+            <div class="date">
+              <p>2023</p>
+            </div>
 
             <div class="project">
               <a href="https://github.com/webdevsint/portfolio" target="_blank"
@@ -229,14 +240,6 @@
             <a href="https://github.com/webdevsint/" target="_blank"
               ><p class="username">
                 @webdevsint <i class="fa-light fa-arrow-up-right"></i></p
-            ></a>
-          </div>
-
-          <div class="row">
-            <p class="platform">LinkedIn</p>
-            <a href="https://www.linkedin.com/in/nehanyaser/" target="_blank"
-              ><p class="username">
-                Nehan Yaser <i class="fa-light fa-arrow-up-right"></i></p
             ></a>
           </div>
 
