--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px">Evercare Security Solutions Ltd.</p>
+              <p style="font-size: 14px">Evercare Security Solutions</p>
               <p class="technologies">Node • Express</p>
             </div>
           </div>
@@ -274,3 +274,4 @@
     </main>
   </body>
 </html>
+
