Fix HTML structure and update project links

--- a/index.html
+++ b/index.html
@@ -58,19 +58,21 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px">Evercare Security Solutions</p>
-              <p class="technologies">Node • Express</p>
+              <p style="font-size: 14px">Zakaria Foundation</p>
+              <p class="technologies">Node • Express • SQLite</p>
             </div>
           </div>
 
           <div class="row">
             <div class="date">
-              <p>Ongoing</p>
+              <p>2025</p>
             </div>
 
             <div class="project">
-              <p style="font-size: 14px">Zakaria Foundation</p>
-              <p class="technologies">Node • Express • SQLite</p>
+              <a href="https://evercaresecure.com/" target="_blank"
+                ><p>Evercare Security Solutions<i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express</p>
             </div>
           </div>
 
@@ -274,4 +276,5 @@
     </main>
   </body>
 </html>
+
 
