Fix HTML structure and update project links

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
             <div class="project">
               <a href="https://evercaresecure.com/" target="_blank"
-                ><p>Evercare Security Solutions<i class="fa-light fa-arrow-up-right"></i></p
+                ><p>Evercare Secure Solutions<i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="technologies">Node • Express</p>
+              <p class="technologies">Node • React</p>
             </div>
           </div>
 
@@ -276,5 +276,6 @@
     </main>
   </body>
 </html>
+
 
 
