Revise index.html with new project information
Updated content and project details in index.html.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <div class="row">
             <div class="date">
-              <p>Ongoing</p>
+              <p>2025</p>
             </div>
 
             <div class="project">
@@ -70,11 +70,13 @@
 
             <div class="project">
               <a href="https://evercaresecure.com/" target="_blank"
-                ><p>Evercare Secure Solutions<i class="fa-light fa-arrow-up-right"></i></p
+                ><p>
+                  Evercare Secure Solutions Lts. <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
               <p class="technologies">Node • React</p>
             </div>
           </div>
+        
 
           <div class="row">
             <div class="date">
@@ -122,9 +124,7 @@
             </div>
 
             <div class="project">
-              <a href="https://squad24seven.com/" target="_blank"
-                ><p>Squad 24 Seven <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
+              <p style="font-size: 14px">Squad 24 Seven</p>
               <p class="technologies">Node • Express</p>
             </div>
           </div>
@@ -132,6 +132,24 @@
 
         <section>
           <h2 class="title">Side Projects</h2>
+
+          <div class="row">
+            <div class="date">
+              <p>2025</p>
+            </div>
+
+            <div class="project">
+              <a
+                href="https://github.com/webdevsint/mood-tracker"
+                target="_blank"
+                ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="description">
+                An open-source URL shortener.
+              </p>
+              <p class="technologies">JavaScript • Local Storage</p>
+            </div>
+          </div>
 
           <div class="row">
             <div class="date">
@@ -276,6 +294,3 @@
     </main>
   </body>
 </html>
-
-
-
