Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px">Zakaria Foundation</p>
-              <p class="technologies">Node • Express • SQLite</p>
+              <a href="https://evercaresecure.com/" target="_blank"
+                ><p>
+                  Evercare Secure Solutions Ltd. <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • React</p>
             </div>
           </div>
 
@@ -69,11 +72,8 @@
             </div>
 
             <div class="project">
-              <a href="https://evercaresecure.com/" target="_blank"
-                ><p>
-                  Evercare Secure Solutions Lts. <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
-              <p class="technologies">Node • React</p>
+              <p style="font-size: 14px">Zakaria Foundation</p>
+              <p class="technologies">Node • Express • SQLite</p>
             </div>
           </div>
         
@@ -294,3 +294,4 @@
     </main>
   </body>
 </html>
+
