Update index.html with new project links and details

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
 
             <div class="project">
               <a
-                href="https://github.com/webdevsint/mood-tracker"
+                href="https://github.com/webdevsint/shorty"
                 target="_blank"
                 ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
               <p class="description">
-                An open-source URL shortener.
+                Just another open source URL shortener.
               </p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
@@ -294,4 +294,5 @@
     </main>
   </body>
 </html>
+
 
