--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px">Zakaria Foundation</p>
+              <a href="https://zakariafoundationusa.com/" target="_blank"
+                ><p>
+                  Zakaria Foundation <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
               <p class="technologies">Node • Express • SQLite</p>
             </div>
           </div>
@@ -84,9 +87,7 @@
             </div>
 
             <div class="project">
-              <a href="https://rongotaan.onrender.com/" target="_blank"
-                ><p>Rongotaan <i class="fa-light fa-arrow-up-right"></i></p
-              ></a>
+              <p style="font-size: 14px;">Rongotaan</p>
               <p class="technologies">Node • Express • JavaScript</p>
             </div>
           </div>
@@ -294,5 +295,6 @@
     </main>
   </body>
 </html>
+
 
 
