--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
           <h2 class="title">About</h2>
 
           <p class="gray">
-            I'm just a 20-year-old who's been playing around with JavaScript for
-            the last few years. I don't have a perfect portfolio, and I've
-            definitely left some projects unfinished, but I've built enough to
-            know I can get things done. If there's anything I can do for you
-            feel free to contact me!
+            I'm a 20-year-old developer and the Founder and Frontend Developer
+            of Cursor Studios, with a few years of hands-on experience in
+            JavaScript. Like many developers, my portfolio is a work in
+            progress, and some projects remain unfinished, but I've built a
+            solid foundation and know what it takes to bring an idea to
+            completion.  If there's anything I can do for you feel free to contact me!
           </p>
         </div>
 
@@ -58,9 +59,40 @@
             </div>
 
             <div class="project">
+              <a href="https://maxleatherindustries.com/" target="_blank"
+                ><p>
+                  Max Leather Industry
+                  <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • React</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2025</p>
+            </div>
+
+            <div class="project">
+              <a href="https://coffeelabbd.com/" target="_blank"
+                ><p>
+                  Coffee Lab Bangladesh
+                  <i class="fa-light fa-arrow-up-right"></i></p
+              ></a>
+              <p class="technologies">Node • Express • WordPress</p>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="date">
+              <p>2025</p>
+            </div>
+
+            <div class="project">
               <a href="https://evercaresecure.com/" target="_blank"
                 ><p>
-                  Evercare Secure Solutions Ltd. <i class="fa-light fa-arrow-up-right"></i></p
+                  Evercare Secure Solutions Ltd.
+                  <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
               <p class="technologies">Node • React</p>
             </div>
@@ -74,12 +106,12 @@
             <div class="project">
               <a href="https://zakariafoundationusa.com/" target="_blank"
                 ><p>
-                  Zakaria Foundation <i class="fa-light fa-arrow-up-right"></i></p
+                  Zakaria Foundation USA
+                  <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
               <p class="technologies">Node • Express • SQLite</p>
             </div>
           </div>
-        
 
           <div class="row">
             <div class="date">
@@ -87,7 +119,7 @@
             </div>
 
             <div class="project">
-              <p style="font-size: 14px;">Rongotaan</p>
+              <p style="font-size: 14px">Rongotaan</p>
               <p class="technologies">Node • Express • JavaScript</p>
             </div>
           </div>
@@ -141,13 +173,11 @@
 
             <div class="project">
               <a
-                href="https://github.com/webdevsint/shorty"
+                href="https://github.com/webdevsint/mood-tracker"
                 target="_blank"
                 ><p>Shorty <i class="fa-light fa-arrow-up-right"></i></p
               ></a>
-              <p class="description">
-                Just another open source URL shortener.
-              </p>
+              <p class="description">An open-source URL shortener.</p>
               <p class="technologies">JavaScript • Local Storage</p>
             </div>
           </div>
@@ -248,6 +278,14 @@
         <section class="socials">
           <h2 class="title">Links</h2>
 
+                    <div class="row">
+            <p class="platform">Agency</p>
+            <a href="https://cursorstudios.vercel.app/" target="_blank"
+              ><p class="username">
+                Cursor Studios <i class="fa-light fa-arrow-up-right"></i></p
+            ></a>
+          </div>
+
           <div class="row">
             <p class="platform">Highlights</p>
             <a href="/frames.html" target="_blank"
@@ -295,6 +333,3 @@
     </main>
   </body>
 </html>
-
-
-
