--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h2 class="title">About</h2>
 
           <p class="gray">
-            I'm a 20-year-old developer and the Founder and Frontend Developer
+            I'm a 20-year-old developer and the founder
             of Cursor Studios, with a few years of hands-on experience in
             JavaScript. Like many developers, my portfolio is a work in
             progress, and some projects remain unfinished, but I've built a
@@ -333,3 +333,4 @@
     </main>
   </body>
 </html>
+
